# cc-desktop-switch

./: .gitignore  Cargo.toml  README.ja.md  README.md  README.zh-CN.md  build.bat  build.spec  installer.nsi  language-unification-active.md  main.py  package.json  pnpm-lock.yaml  post-1.1-cleanup-active.md  requirements.txt  start.bat  vite.config.js
backend/: api_adapters.py  ccswitch_import.py  config.py  i18n.py  main.py  model_alias.py  provider_tools.py  proxy.py  registry.py  update.py
codex_history/: ui-beautification-backport-2026-05-01.md  ui-layout-cleanup-after-backport-2026-05-01.md
docs/: CHANGELOG.md  DeepSeek-ClaudeDesktop-排查报告.md  QUICK_START.md  README.md  USAGE.md  release-notes-v1.0.10.md  release-notes-v1.0.11.md  release-notes-v1.0.12.md  release-notes-v1.0.13.md  release-notes-v1.0.14.md  release-notes-v1.0.15.md  release-notes-v1.0.16.md  release-notes-v1.0.17.md  release-notes-v1.0.18.md  release-notes-v1.0.19.md  release-notes-v1.0.2.md  release-notes-v1.0.20.md  release-notes-v1.0.4.md  release-notes-v1.0.6.md  release-notes-v1.0.7.md  (+2 more)
macos/: README.md  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ccswitch_import.rs  config.rs  feedback.rs  lib.rs  main.rs  model_alias.rs  models.rs  provider_tools.rs  state.rs  static_frontend.rs  system_proxy.rs  update.rs
src-tauri/src/desktop/: macos.rs  mod.rs  windows.rs
src-tauri/src/proxy/: conversion.rs  forwarding.rs  listener.rs  mod.rs  runtime.rs  streaming.rs  tests.rs
xtask/: Cargo.toml
xtask/src/: contracts.rs  main.rs  release.rs
(+43 files in other folders)
