[package]
name = "cc-desktop-switch"
version = "1.1.1"
description = "CC Desktop Switch Tauri runtime"
authors = ["CC Desktop Switch Contributors"]
edition = "2024"
license = "MIT"

[lib]
name = "cc_desktop_switch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
base64 = "0.22"
reqwest = { version = "0.13.3", features = ["blocking", "json", "multipart"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2.11.0", features = ["tray-icon"] }
tauri-plugin-single-instance = "2.4.1"
getrandom = "0.3"
include_dir = "0.7"
mime_guess = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", features = ["NSRunningApplication"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
